--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Arena</title>
+    <title>Soccer Slot Manager</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
         * {
@@ -311,6 +311,7 @@
     </style>
 </head>
 <body>
+    {% raw %}
     <div id="app">
         <div class="container">
             <div class="auth-section">
@@ -427,6 +428,7 @@
             </div>
         </div>
     </div>
+    {% endraw %}
 
     <script>
         const { createApp } = Vue;
